--- a/index.html
+++ b/index.html
@@ -10,14 +10,11 @@
 
 	<body>
 		<!--BLOCK 1-->
+		Hello from <strong>Earth</strong>
 		<div class="postcard">
-			<div class="header">
-				<div class="header-left">
-					<h1>My Postcard</h1>
-				</div>
-				<div class="header-right">
-					<img class="image" src="https://github.com/breatheco-de/exercise-postcard/blob/main/.learn/assets/4geeks.png?raw=true" />
-				</div>
+			<div class="header row">
+				<h1 class="col-1">My Postcard</h1>
+				<img class="image col-1" src="https://github.com/breatheco-de/exercise-postcard/blob/main/.learn/assets/4geeks.png?raw=true" />
 			</div>
 			<!--BLOCK 2-->
 			<div class="container">
@@ -29,8 +26,8 @@
 				</div>
 				<div class="container-right">
 					<input type="text" placeholder="Some Name" />
-					<input type="email" placeholder="Some Email" />
-					<input type="text" placeholder="Some comment" />
+					<input type="email" placeholder="Some Email" style="margin-top: 0.5rem" />
+					<input type="text" placeholder="Some comment" style="margin-top: 0.5rem" />
 				</div>
 			</div>
 			<!--BLOCK 3-->
